# ti-wizard-backend

./: README.md  compose.yml  requirements.txt  setup.cfg  start.sh
server/: Dockerfile  create_remote_entity_webhook.py  create_superuser.py  pyproject.toml  pytest.ini  requirements.txt
server/apps/: entity_types.py  urls.py
server/apps/core/: urls.py  views.py
server/apps/core/middleware/: api_logging_middleware.py
server/apps/federations/: apps.py  routers.py  urls.py
server/apps/federations/admin/: __init__.py  federation.py
server/apps/federations/models/: __init__.py  federation.py
server/apps/federations/serializers/: __init__.py  federation.py
server/apps/federations/tests/: test_federations.py
server/apps/federations/viewsets/: __init__.py  federation.py
server/apps/metadata_importer/: views.py
server/apps/remote_entities/: admin.py  apps.py  routers.py  urls.py
server/apps/remote_entities/models/: __init__.py  remote_entity.py
server/apps/remote_entities/serializers/: __init__.py  remote_entity.py
server/apps/remote_entities/viewsets/: __init__.py  remote_entity.py
server/apps/roles/: admin.py  routers.py  urls.py
server/apps/roles/models/: __init__.py  identity_role.py
server/apps/roles/serializers/: __init__.py  identity_role.py
server/apps/roles/viewsets/: __init__.py  identity_role.py
server/config/: api_urls.py  asgi.py  settings.py  urls.py
server/config/migrations/federations/: 0001_initial.py
server/config/settings/: __init__.py  celery.py  installed_apps.py  settings.py
server/linters/: .flake8
(+27 files in other folders)
