[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["alexarlord-boop <rezerw0.1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
attrs = "24.2.0"
bcrypt = "4.1.3"
dj-database-url = "2.3.0"
Django = "*"
django-cors-headers = "*"
djangorestframework = "3.15.2"
drf-spectacular = "0.27.2"
psycopg2-binary = "2.9.9"
pycryptodome = "3.20.0"
requests = "2.31.0"
djangorestframework-simplejwt = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
